# edh-early-history

./: .hlint.yaml  LICENSE  README.md  brittany.yaml  default.nix  stack.yaml
PoC/: case-of.edh  event-sink.edh  generator.edh  goroutine.edh  indexable.edh  operator-in-edh.edh  scope-reflect.edh  simple-class.edh
Tour/: Readme.md  backlog.md  branch.edh  comprehension.edh  concur.edh  event-sink.edh  generator.edh  goroutine.edh  indexable.edh  inheritance.edh  interpreter.edh  magic.edh  operator.edh  reactor.edh  str.edh
edh/: README.md  edh.cabal
edh/edh_modules/batteries/: iter.edh  root.edh
edh/pub/Language/Edh/: EHI.hs
edh/repl/: Main.hs  Repl.hs
edh/src/: Decimal.hs  EHI.hs  Evaluator.hs  Lexer.hs  NiceLook.hs  Parser.hs  PoC.hs  Utils.hs
edh/src/Common/: ParserT.hs  Stream.hs
edh/src/EDH/: Decimal.hs  Evaluator.hs  Lexer.hs  Parser.hs  Utils.hs
edh/src/EDH/Common/: ParserT.hs  Stream.hs
edh/src/EDH/Evaluator/: BuiltIns.hs  Object.hs  Types.hs
edh/src/EDH/Lexer/: Token.hs  Types.hs
edh/src/EDH/Parser/: AST.hs  Types.hs
edh/src/Evaluator/: BuiltIns.hs  Object.hs  Types.hs
edh/src/Language/Edh/: AST.hs  Batteries.hs  Control.hs  EHI.hs  Event.hs  Interpreter.hs  Parser.hs  Runtime.hs
edh/src/Language/Edh/Batteries/: Assign.hs  Ctrl.hs  Data.hs  Math.hs  Reflect.hs  Runtime.hs  Utils.hs
edh/src/Language/Edh/Common/: Decimal.hs  Stream.hs  Utils.hs
edh/src/Language/Edh/Compiler/: Lexer.hs  Parser.hs  ParserT.hs
edh/src/Language/Edh/Compiler/Lexer/: Token.hs  Types.hs
edh/src/Language/Edh/Compiler/Parser/: AST.hs  Types.hs
edh/src/Language/Edh/Details/: CoreLang.hs  Evaluate.hs  PkgMan.hs  RtTypes.hs  Tx.hs  Utils.hs  _Tx.hs
edh/src/Language/Edh/Interpreter/: Details.hs  Evaluate.hs
edh/src/Language/Edh/Parser/: Details.hs
edh/src/Language/Edh/Runtime/: Evaluator.hs
edh/src/Language/Edh/Runtime/Evaluator/: BuiltIns.hs  Object.hs  Types.hs
edh/src/Lexer/: Token.hs  Types.hs
edh/src/Parser/: AST.hs  Types.hs
edh_modules/batteries/: SeparateConcatAndComprehOp.edh
edh_modules/batteries/magic/: __init__.edh  arith.edh
edh_modules/batteries/root/: __init__.edh  concur.edh  iter.edh  ops.edh  str.edh
lossless-decimal/: README.md  lossless-decimal.cabal
lossless-decimal/src/Data/Lossless/: Decimal.hs
