cabal-version: 2.4
name: edh
version: 0.1.0.0
license: BSD-3-Clause
copyright: 2019 Compl Yue
maintainer: compl.yue@icloud.com
author: Compl Yue
stability: experimental
homepage: https://github.com/complyue/edh
bug-reports: https://github.com/complyue/edh/issues
synopsis: the language/runtime for Event Distributing & Hosting
description:
    Please see the README on Github at <https://github.com/complyue/edh>
category: Distributed,Event,Distributing,Hosting,Runtime,Language
build-type: Simple
extra-source-files:
    README.md
    CHANGELOG.md

source-repository head
    type: git
    location: https://github.com/complyue/edh
    subdir: edh

library
    exposed-modules:
        Language.Edh.EHI
        Language.Edh.Runtime.Evaluator
        Language.Edh.Runtime.Evaluator.BuiltIns
        Language.Edh.Runtime.Evaluator.Object
        Language.Edh.Runtime.Evaluator.Types
        Language.Edh.Compiler.Lexer
        Language.Edh.Compiler.Lexer.Token
        Language.Edh.Compiler.Lexer.Types
        Language.Edh.Compiler.ParserT
        Language.Edh.Compiler.Parser
        Language.Edh.Compiler.Parser.AST
        Language.Edh.Compiler.Parser.Types
        Language.Edh.Common.Stream
        Language.Edh.Common.Utils
    hs-source-dirs: src
    other-modules:
        Paths_edh
    autogen-modules:
        Paths_edh
    default-language: Haskell2010
    default-extensions: NoImplicitPrelude OverloadedStrings
    ghc-options: -Wall
    build-depends:
        ghc >=8.6.5,
        base >=4.12 && <5,
        lossless-decimal -any,
        rio -any,
        text -any,
        transformers -any,
        mtl -any,
        containers -any

executable edhi
    main-is: Main.hs
    hs-source-dirs: repl
    other-modules:
        Repl
    default-language: Haskell2010
    default-extensions: OverloadedStrings NoImplicitPrelude
    build-depends:
        base >=4.12 && <5,
        rio -any,
        text -any,
        haskeline -any,
        edh -any
